# API-Test

./: Makefile  README.md  pyproject.toml
api/: geopy.py  newsapi.py  pyowm.py  tvdb_v4_official.py  wikipedia.py
