[tool.poetry]
name = "api-test"
version = "0.1.0"
description = ""
authors = ["Tatiana_Garbuzova <tatiannna0697@gmail.com>"]
readme = "README.md"
packages = [{include = "api_test"}]

[tool.poetry.dependencies]
python = "^3.10"
newsapi-python = "^0.2.7"
python-dotenv = "^1.0.1"
pyowm = "^3.3.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
